--- a/package.json
+++ b/package.json
@@ -1,5 +1,29 @@
 {
-  "dependencies": {
-    "multer": "^1.4.5-lts.1"
-  }
+  "name": "noderoute",
+  "version": "1.0.0",
+  "description": "A lightweight, flexible HTTP server framework for Node.js.",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Your Name",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ah-naf/noderoute.git"
+  },
+  "keywords": [
+    "http",
+    "server",
+    "framework",
+    "nodejs",
+    "middleware",
+    "routing",
+    "static-files"
+  ],
+  "bugs": {
+    "url": "https://github.com/ah-naf/noderoute/issues"
+  },
+  "homepage": "https://github.com/ah-naf/noderoute#readme",
 }
